# mcp-md-fileserver

./: .gitignore  README.md  config.py  cp-md.sh  db.py  extractor.py  main.py  mcp.json  pyproject.toml  qwen-thinking-prompt.md  resources.py  scanner.py  spec.md  tests.md  tools.py
.github/workflows/: ci.yml
tests/: test_db.py  test_extractor.py  test_scanner.py  test_tools.py
