[project]
name = "mcp-md-fileserver"
version = "0.1.0"
description = "python based server to scan for md files to deliver them to llm models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==2.12.3",
    "langdetect>=1.0.9",
    "pip>=25.2",
    "spacy>=3.8.7",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.3",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
